<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="15dp">

    <TextView
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_usuarios"
        android:layout_marginBottom="15dp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/etPnombre"
        android:autofillHints="name"
        android:hint="@string/primer_nombre"
        android:layout_width="match_parent"
        android:layout_marginBottom="15dp"
        android:layout_height="45dp"
        android:inputType="text"/>
    <EditText
        android:id="@+id/etSnombre"
        android:autofillHints="name"
        android:hint="@string/segundo_nombre"
        android:layout_width="match_parent"
        android:layout_marginBottom="15dp"
        android:layout_height="45dp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/etPapellido"
        android:autofillHints="name"
        android:hint="@string/primer_apellido"
        android:layout_width="match_parent"
        android:layout_marginBottom="15dp"
        android:layout_height="45dp"
        android:inputType="text"/>
    <EditText
        android:id="@+id/etSapellido"
        android:autofillHints="name"
        android:hint="@string/segundo_apellido"
        android:layout_width="match_parent"
        android:layout_marginBottom="15dp"
        android:layout_height="45dp"
        android:inputType="text"/>
    <EditText
        android:id="@+id/etRol"
        android:autofillHints="name"
        android:hint="@string/rol"
        android:layout_width="match_parent"
        android:layout_marginBottom="15dp"
        android:layout_height="45dp"
        android:inputType="number"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">
        <EditText
            android:id="@+id/etTipoDoc"
            android:autofillHints="name"
            android:hint="@string/tipo_documento"
            android:layout_width="65dp"
            android:layout_height="45dp"
            android:inputType="number"/>
        <EditText
            android:id="@+id/etNiden"
            android:autofillHints="name"
            android:hint="@string/n_identi"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="number"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <Button
            android:id="@+id/btnGuardar"
            android:text="@string/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>